# ImageToTextengine

./: .gitignore  pyproject.toml
rsw_h/: db.sqlite3  manage.py
rsw_h/core/: models.py  views.py
rsw_h/core/migrations/: 0001_initial.py
rsw_h/rsw_h/: asgi.py  settings.py  urls.py  wsgi.py
rsw_h/templates/: home.html  upload.html
tests/: test_dummy.py
